--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/meu.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="index is-preload">
@@ -17,7 +18,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Alexandra <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">Alexandra Carvalho <span>2017537</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
@@ -57,7 +58,7 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>Portefólio Alexandra Carvalho</h2>
 						</header>
 						<p>This is <strong>Twenty</strong>, a free
 						<br />
