--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<header>
 							<h2>Portefólio Alexandra Carvalho</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p>Escola Superior de Educação de Lisboa <strong>Politécnico de Lisboa</strong>, Artes Visusais e Tecnológicas
 						<br />
 						responsive template
 						<br />
