--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 						<header>
 							<h2>Portefólio Alexandra Carvalho</h2>
 						</header>
-						<p>Escola Superior de Educação de Lisboa <strong>Politécnico de Lisboa</strong>, Artes Visusais e Tecnológicas
+						<p>Escola Superior de Educação de Lisboa do <strong>Politécnico de Lisboa</strong>
 						<br />
-						responsive template
+
 						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						 <a href="http://html5up.net">Artes Visuais e Tecnológicas</a>.</p>
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#main" class="button fit scrolly">Aceder</a></li>
 							</ul>
 						</footer>
 
