--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 									<article class="item">
 										<a href="images/pic06.jpg" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Representação Digital</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="images/pic07.jpg" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Arte Multimedia</h3>
 										</header>
 									</article>
 								</div>
@@ -140,7 +140,7 @@
 								<h2>Sobre mim</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="alex/eu.jpg" alt="" /></a>
+							<a href="#" class="image featured"Representação Digital/eu.jpg" alt="" /></a>
 
 							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
