--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image eu48"><img src="alex/eu.jpg" alt="" /></span>
+							<span class="image eu48"><img src="images/eu.jpg" alt="" /></span>
 							<h1 id="title">Alexandra </h1>
 							<p>Estudande</p>
 						</div>
@@ -93,7 +93,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="alex/Pintura.jpg" class="image fit"><img src="alex/Pintura.jpg" alt="" /></a>
+										<a href="images/pintura.jpg" class="image fit"><img src="images/pintura.jpg" alt="" /></a>
 										<header>
 											<h3>Pintura</h3>
 										</header>
@@ -101,7 +101,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="alex/hands.jpg" class="image fit"><img src="alex/hands.jpg" alt="" /></a>
+										<a href="images/escultura.jpg" class="image fit"><img src="images/escultura.jpg" alt="" /></a>
 										<header>
 											<h3>Escultura</h3>
 										</header>
@@ -123,7 +123,7 @@
 									<article class="item">
 										<a href="images/pic07.jpg" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Arte Multimedia</h3>
+											<h3>Representação Digital</h3>
 										</header>
 									</article>
 								</div>
