--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="alex/Desenho.jpg" class="image fit"><img src="alex/Desenho.jpg" alt="" /></a>
+										<a href="images/pic02.jpg" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3>Desenho</h3>
 										</header>
@@ -107,7 +107,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="alex/design.jpg" class="image fit"><img src="alex/design.jpg" alt="" /></a>
+										<a href="images/pic03.jpg" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Design</h3>
 										</header>
@@ -117,9 +117,15 @@
 									<article class="item">
 										<a href="images/pic06.jpg" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Representação Digital</h3>
+											<h3>Arte Multimedia</h3>
 										</header>
 									</article>
+									<div class="row">
+										 <a href="video" class="image fit">
+											 <video width="260" height="195" autoplay loop muted>
+												 <source src="images/video.avi" type="video/avi" >
+											</video> </a>
+										</div>
 									<article class="item">
 										<a href="images/pic07.jpg" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
@@ -142,12 +148,8 @@
 
 							<a href="#" class="image featured"Representação Digital/eu.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Sou aluna de lincenciatura, da Escola superior de Educação de Lisboa do Politécnico de Lisboa.
+							Estudei na escola secundária Gabriel Pereira, Évora.</p>
 
 						</div>
 					</section>
@@ -160,10 +162,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Para encomendas, esposições ou dúvidas contacte-me por aqui.</p>
 
 							<form method="post" action="#">
 								<div class="row">
