--- a/index.html
+++ b/index.html
@@ -114,18 +114,19 @@
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
+									<div class="row">
+										 <a href="video" class="image fit">
+											 <video width="450" height="300" autoplay loop muted>
+												 <source src="images/video.mp4" type="video/mp4" >
+											</video> </a>
+										</div>
 									<article class="item">
-										<a href="images/pic06.jpg" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+
 										<header>
 											<h3>Arte Multimedia</h3>
 										</header>
 									</article>
-									<div class="row">
-										 <a href="video" class="image fit">
-											 <video width="260" height="195" autoplay loop muted>
-												 <source src="images/video.avi" type="video/avi" >
-											</video> </a>
-										</div>
+
 									<article class="item">
 										<a href="images/pic07.jpg" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
